[gd_scene load_steps=6 format=3 uid="uid://b2j7n1b76p01c"]

[ext_resource type="Script" path="res://Scripts/testing grounds.gd" id="1_5c5tl"]
[ext_resource type="PackedScene" uid="uid://bd2b3pd08qtox" path="res://Scenes/players/player.tscn" id="1_vxoov"]
[ext_resource type="Material" path="res://assets/materials/basic/black.tres" id="3_8k6oy"]
[ext_resource type="PackedScene" uid="uid://c0x0dnj5q0va2" path="res://Scenes/misc/enemy.tscn" id="3_pjdrh"]

[sub_resource type="NavigationMesh" id="NavigationMesh_j6mrc"]
vertices = PackedVector3Array(-5.50101, 0.657088, -2.60101, -5.201, 0.657088, -4.201, -5.201, 0.657088, -8.801, -51.501, 0.657088, -9.201, -51.501, 0.657088, -3.90101, -5.201, 0.657088, -4.201, -5.50101, 0.657088, -2.60101, -5.10101, 0.657088, -3.00101, -5.00101, 0.657088, -3.90101, -51.501, 0.657088, -9.201, -5.201, 0.657088, -8.801, -4.801, 0.657088, -9.201, 1.99899, 0.657088, -3.801, -5.00101, 0.657088, -3.90101, -5.10101, 0.657088, -3.00101, 3.49899, 0.657088, -3.00101, -27.801, 0.657088, -73.901, -37.001, 0.657088, -73.901, -73.901, 0.657088, -46.301, 2.39899, 0.657088, -4.201, 1.99899, 0.657088, -3.801, 3.49899, 0.657088, -3.00101, 2.39899, 0.657088, -5.50101, 2.39899, 0.657088, -4.201, 3.49899, 0.657088, -3.00101, 3.49899, 0.657088, -7.201, -0.00100708, 0.657088, -73.901, -1.701, 0.657088, -9.301, 5.199, 0.657088, -9.301, 9.199, 0.657088, -73.901, 1.99899, 0.657088, -5.90101, 2.39899, 0.657088, -5.50101, 3.49899, 0.657088, -7.201, 1.99899, 0.657088, -5.90101, 3.49899, 0.657088, -7.201, -1.701, 0.657088, -7.201, -2.801, 0.657088, -5.90101, -0.00100708, 0.657088, -73.901, -9.301, 0.657088, -73.901, -1.701, 0.657088, -9.301, -2.801, 0.657088, -5.90101, -1.701, 0.657088, -7.201, -2.10101, 0.657088, -7.60101, -2.801, 0.657088, -8.801, -2.801, 0.657088, -5.90101, -2.10101, 0.657088, -7.60101, -2.10101, 0.657088, -8.90101, -51.501, 0.657088, -9.201, -4.801, 0.657088, -9.201, -1.701, 0.657088, -9.301, -9.301, 0.657088, -73.901, -18.501, 0.657088, -73.901, -73.901, 0.657088, -46.301, -3.00101, 0.657088, -9.10101, -2.801, 0.657088, -8.801, -2.10101, 0.657088, -8.90101, -1.701, 0.657088, -9.301, -51.501, 0.657088, -3.90101, -73.901, 0.657088, 27.699, -73.901, 0.657088, 36.999, -18.501, 0.657088, 73.999, -9.301, 0.657088, 73.999, -5.10101, 0.657088, -0.901009, -4.801, 0.657088, -9.201, -3.00101, 0.657088, -9.10101, -1.701, 0.657088, -9.301, -73.901, 0.657088, -9.301, -61.701, 0.657088, -9.201, -61.301, 0.657088, -9.60101, -73.901, 0.657088, -18.501, -64.701, 0.657088, -73.901, -73.901, 0.657088, -73.901, -73.901, 0.657088, -64.701, -73.901, 0.657088, 64.699, -73.901, 0.657088, 73.999, -64.701, 0.657088, 73.999, 73.999, 0.657088, -64.701, 73.999, 0.657088, -73.901, 64.699, 0.657088, -73.901, 64.699, 0.657088, 73.999, 73.999, 0.657088, 73.999, 73.999, 0.657088, 64.699, -61.701, 0.657088, -3.90101, -61.701, 0.657088, -9.201, -73.901, 0.657088, -9.301, -73.901, 0.657088, -0.00100708, 73.999, 0.657088, -27.801, 73.999, 0.657088, -37.001, 36.999, 0.657088, -73.901, 27.699, 0.657088, -73.901, -61.401, 0.657088, -3.60101, -61.701, 0.657088, -3.90101, -73.901, 0.657088, -0.00100708, -61.001, 0.907088, -3.60101, -61.401, 0.657088, -3.60101, -73.901, 0.657088, -0.00100708, -73.901, 0.657088, 36.999, -37.001, 0.657088, 73.999, -27.801, 0.657088, 73.999, -61.001, 0.907088, -3.60101, -73.901, 0.657088, -0.00100708, -73.901, 0.657088, 9.199, -52.201, 0.907088, -3.60101, -55.501, 0.657088, -73.901, -64.701, 0.657088, -73.901, -73.901, 0.657088, -64.701, -73.901, 0.657088, 64.699, -64.701, 0.657088, 73.999, -55.501, 0.657088, 73.999, -73.901, 0.657088, 55.499, 73.999, 0.657088, -55.501, 73.999, 0.657088, -64.701, 64.699, 0.657088, -73.901, 55.499, 0.657088, -73.901, 55.499, 0.657088, 73.999, 64.699, 0.657088, 73.999, 73.999, 0.657088, 64.699, -73.901, 0.657088, -27.801, -73.901, 0.657088, -18.501, -61.301, 0.657088, -9.60101, -0.00100708, 0.657088, 73.999, 9.199, 0.657088, 73.999, 5.09899, 0.657088, -0.901009, -51.801, 0.657088, -3.60101, -52.201, 0.907088, -3.60101, -73.901, 0.657088, 9.199, -73.901, 0.657088, 18.499, -55.501, 0.657088, -73.901, -73.901, 0.657088, -64.701, -73.901, 0.657088, -55.501, -46.301, 0.657088, -73.901, 73.999, 0.657088, 27.699, 73.999, 0.657088, 18.499, 5.09899, 0.657088, -0.901009, 9.199, 0.657088, 73.999, 18.499, 0.657088, 73.999, -18.501, 0.657088, -73.901, -27.801, 0.657088, -73.901, -73.901, 0.657088, -46.301, 55.499, 0.657088, 73.999, 73.999, 0.657088, 64.699, 73.999, 0.657088, 55.499, 46.199, 0.657088, 73.999, -73.901, 0.657088, -27.801, -61.301, 0.657088, -9.60101, -51.701, 0.657088, -9.50101, -73.901, 0.657088, -37.001, 27.699, 0.657088, 73.999, 73.999, 0.657088, 36.999, 73.999, 0.657088, 27.699, 18.499, 0.657088, 73.999, -73.901, 0.657088, 36.999, -27.801, 0.657088, 73.999, -18.501, 0.657088, 73.999, -73.901, 0.657088, 55.499, -55.501, 0.657088, 73.999, -46.301, 0.657088, 73.999, -73.901, 0.657088, 46.199, 73.999, 0.657088, -46.301, 73.999, 0.657088, -55.501, 55.499, 0.657088, -73.901, 46.199, 0.657088, -73.901, 73.999, 0.657088, -9.301, 5.59899, 0.657088, -8.90101, 5.59899, 0.657088, -1.50101, 73.999, 0.657088, -0.00100708, 73.999, 0.657088, -27.801, 27.699, 0.657088, -73.901, 18.499, 0.657088, -73.901, 5.59899, 0.657088, -8.90101, 73.999, 0.657088, -18.501, -51.801, 0.657088, -3.60101, -73.901, 0.657088, 18.499, -73.901, 0.657088, 27.699, -51.501, 0.657088, -3.90101, -51.801, 0.657088, -3.60101, -73.901, 0.657088, 27.699, -46.301, 0.657088, -73.901, -73.901, 0.657088, -55.501, -73.901, 0.657088, -46.301, -37.001, 0.657088, -73.901, 9.199, 0.657088, -73.901, 5.199, 0.657088, -9.301, 5.59899, 0.657088, -8.90101, 18.499, 0.657088, -73.901, 73.999, 0.657088, -0.00100708, 5.59899, 0.657088, -1.50101, 5.09899, 0.657088, -0.901009, 73.999, 0.657088, 9.199, 46.199, 0.657088, 73.999, 73.999, 0.657088, 55.499, 73.999, 0.657088, 46.199, 36.999, 0.657088, 73.999, -73.901, 0.657088, -46.301, -73.901, 0.657088, -37.001, -51.701, 0.657088, -9.50101, -73.901, 0.657088, -46.301, -51.701, 0.657088, -9.50101, -51.501, 0.657088, -9.201, -5.50101, 0.657088, -1.301, -5.50101, 0.657088, -2.60101, -51.501, 0.657088, -3.90101, 73.999, 0.657088, 18.499, 73.999, 0.657088, 9.199, 5.09899, 0.657088, -0.901009, -73.901, 0.657088, 36.999, -73.901, 0.657088, 46.199, -46.301, 0.657088, 73.999, -37.001, 0.657088, 73.999, 73.999, 0.657088, -46.301, 46.199, 0.657088, -73.901, 36.999, 0.657088, -73.901, 73.999, 0.657088, -37.001, -5.10101, 0.657088, -0.901009, -9.301, 0.657088, 73.999, -0.00100708, 0.657088, 73.999, 5.09899, 0.657088, -0.901009, 36.999, 0.657088, 73.999, 73.999, 0.657088, 46.199, 73.999, 0.657088, 36.999, 27.699, 0.657088, 73.999, 73.999, 0.657088, -9.301, 73.999, 0.657088, -18.501, 5.59899, 0.657088, -8.90101, -5.10101, 0.657088, -0.901009, -5.50101, 0.657088, -1.301, -51.501, 0.657088, -3.90101, -17.901, 12.4071, -18.601, -17.401, 12.4071, -18.601, -17.401, 12.4071, -24.801, -17.901, 12.4071, -30.601, -41.801, 12.4071, -66.701, -35.901, 12.4071, -67.701, -42.001, 12.4071, -67.701, -17.901, 12.4071, -30.601, -17.401, 12.4071, -24.801, -17.401, 12.4071, -30.901, -66.501, 12.4071, -24.801, -66.501, 12.4071, -18.601, -65.901, 12.4071, -18.601, -65.901, 12.4071, -30.601, -41.801, 12.4071, -66.701, -42.001, 12.4071, -67.701, -48.201, 12.4071, -67.701, -53.701, 12.4071, -66.701, -66.501, 12.4071, -30.901, -66.501, 12.4071, -24.801, -65.901, 12.4071, -30.601, -17.901, 12.4071, -30.601, -17.401, 12.4071, -30.901, -17.401, 12.4071, -37.101, -17.901, 12.4071, -42.501, -53.701, 12.4071, -66.701, -54.301, 12.4071, -67.701, -60.401, 12.4071, -67.701, -65.501, 12.4071, -66.701, -17.901, 12.4071, -42.501, -17.401, 12.4071, -37.101, -17.401, 12.4071, -43.201, -66.501, 12.4071, -37.101, -66.501, 12.4071, -30.901, -65.901, 12.4071, -30.601, -65.901, 12.4071, -42.501, -65.501, 12.4071, -66.701, -60.401, 12.4071, -67.701, -66.501, 12.4071, -67.701, -66.501, 12.4071, -43.201, -66.501, 12.4071, -37.101, -65.901, 12.4071, -42.501, -17.901, 12.4071, -42.501, -17.401, 12.4071, -43.201, -17.401, 12.4071, -49.401, -17.901, 12.4071, -54.401, -65.901, 12.4071, -66.301, -65.501, 12.4071, -66.701, -66.501, 12.4071, -67.701, -17.901, 12.4071, -54.401, -17.401, 12.4071, -49.401, -17.401, 12.4071, -55.501, -66.501, 12.4071, -49.401, -66.501, 12.4071, -43.201, -65.901, 12.4071, -42.501, -65.901, 12.4071, -54.401, -65.901, 12.4071, -66.301, -66.501, 12.4071, -67.701, -66.501, 12.4071, -61.601, -66.501, 12.4071, -55.501, -66.501, 12.4071, -49.401, -65.901, 12.4071, -54.401, -17.901, 12.4071, -54.401, -17.401, 12.4071, -55.501, -17.401, 12.4071, -61.601, -17.901, 12.4071, -66.301, -66.501, 12.4071, -61.601, -66.501, 12.4071, -55.501, -65.901, 12.4071, -54.401, -65.901, 12.4071, -66.301, -17.901, 12.4071, -66.301, -17.401, 12.4071, -61.601, -17.401, 12.4071, -67.701, -18.101, 12.4071, -66.601, -17.901, 12.4071, -66.301, -17.401, 12.4071, -67.701, -18.101, 12.4071, -66.601, -17.401, 12.4071, -67.701, -23.601, 12.4071, -67.701, -29.901, 12.4071, -66.701, -18.101, 12.4071, -66.601, -23.601, 12.4071, -67.701, -29.701, 12.4071, -67.701, -53.701, 12.4071, -66.701, -48.201, 12.4071, -67.701, -54.301, 12.4071, -67.701, -29.901, 12.4071, -66.701, -29.701, 12.4071, -67.701, -35.901, 12.4071, -67.701, -41.801, 12.4071, -66.701, -61.001, 0.907088, -3.60101, -52.201, 0.907088, -3.60101, -52.501, 0.907088, -3.90101, -60.701, 0.907088, -3.90101, -64.901, 9.15709, -30.401, -52.101, 9.15709, -18.601, -43.801, 9.15709, -18.601, -64.901, 9.15709, -42.201, -60.701, 5.15709, -11.101, -60.701, 0.907088, -3.90101, -52.501, 0.907088, -3.90101, -52.501, 5.15709, -11.101, -41.901, 9.15709, -65.701, -64.901, 9.15709, -54.001, -64.901, 9.15709, -42.201, -43.801, 9.15709, -18.601, -18.901, 9.15709, -30.401, -18.901, 9.15709, -42.201, -60.701, 9.15709, -18.201, -60.701, 5.15709, -11.101, -52.501, 5.15709, -11.101, -52.501, 9.15709, -18.201, -43.801, 9.15709, -18.601, -35.501, 9.15709, -18.601, -18.901, 9.15709, -30.401, -61.101, 9.15709, -18.601, -60.701, 9.15709, -18.201, -52.501, 9.15709, -18.201, -52.101, 9.15709, -18.601, -64.901, 9.15709, -30.401, -18.901, 9.15709, -54.001, -30.401, 9.15709, -65.701, -41.901, 9.15709, -65.701, -18.901, 9.15709, -42.201, -64.901, 9.15709, -30.401, -64.901, 9.15709, -18.601, -61.101, 9.15709, -18.601, -27.201, 9.15709, -18.601, -18.901, 9.15709, -18.601, -18.901, 9.15709, -30.401, -18.901, 9.15709, -54.001, -18.901, 9.15709, -65.701, -30.401, 9.15709, -65.701, -53.401, 9.15709, -65.701, -64.901, 9.15709, -65.701, -64.901, 9.15709, -54.001, -41.901, 9.15709, -65.701, -53.401, 9.15709, -65.701, -64.901, 9.15709, -54.001, -35.501, 9.15709, -18.601, -27.201, 9.15709, -18.601, -18.901, 9.15709, -30.401, 4.299, 1.90709, -2.10101, -4.50101, 1.90709, -2.00101, 4.59899, 1.90709, -1.90101, 4.59899, 1.90709, -8.301, -1.10101, 1.90709, -8.301, 4.09899, 1.90709, -8.201, 4.59899, 1.90709, -8.301, 4.09899, 1.90709, -8.201, 4.39899, 1.90709, -8.00101, 4.49899, 1.90709, -2.40101, 4.299, 1.90709, -2.10101, 4.59899, 1.90709, -1.90101, 4.59899, 1.90709, -8.301, 4.39899, 1.90709, -8.00101, 4.49899, 1.90709, -2.40101, 4.59899, 1.90709, -1.90101, -4.201, 1.90709, -4.801, 1.39899, 1.90709, -4.801, -3.60101, 1.90709, -5.00101, -4.201, 1.90709, -4.801, -3.60101, 1.90709, -5.00101, -3.801, 1.90709, -5.301, -4.201, 1.90709, -8.201, -4.201, 1.90709, -4.801, -3.801, 1.90709, -5.301, -3.801, 1.90709, -8.201)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 4), PackedInt32Array(2, 4, 3), PackedInt32Array(8, 7, 5), PackedInt32Array(5, 7, 6), PackedInt32Array(11, 10, 9), PackedInt32Array(13, 12, 14), PackedInt32Array(14, 12, 15), PackedInt32Array(18, 17, 16), PackedInt32Array(21, 20, 19), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(27, 26, 28), PackedInt32Array(28, 26, 29), PackedInt32Array(30, 32, 31), PackedInt32Array(36, 35, 33), PackedInt32Array(33, 35, 34), PackedInt32Array(39, 38, 37), PackedInt32Array(42, 41, 40), PackedInt32Array(46, 45, 43), PackedInt32Array(43, 45, 44), PackedInt32Array(48, 47, 49), PackedInt32Array(49, 47, 52), PackedInt32Array(49, 52, 51), PackedInt32Array(49, 51, 50), PackedInt32Array(54, 53, 55), PackedInt32Array(55, 53, 56), PackedInt32Array(58, 57, 59), PackedInt32Array(59, 57, 62), PackedInt32Array(59, 62, 60), PackedInt32Array(60, 62, 61), PackedInt32Array(65, 64, 63), PackedInt32Array(67, 66, 68), PackedInt32Array(68, 66, 69), PackedInt32Array(71, 70, 72), PackedInt32Array(75, 74, 73), PackedInt32Array(78, 77, 76), PackedInt32Array(81, 80, 79), PackedInt32Array(83, 82, 84), PackedInt32Array(84, 82, 85), PackedInt32Array(87, 86, 88), PackedInt32Array(88, 86, 89), PackedInt32Array(92, 91, 90), PackedInt32Array(95, 94, 93), PackedInt32Array(96, 98, 97), PackedInt32Array(100, 99, 101), PackedInt32Array(101, 99, 102), PackedInt32Array(105, 104, 103), PackedInt32Array(107, 106, 108), PackedInt32Array(108, 106, 109), PackedInt32Array(111, 110, 112), PackedInt32Array(112, 110, 113), PackedInt32Array(116, 115, 114), PackedInt32Array(119, 118, 117), PackedInt32Array(120, 122, 121), PackedInt32Array(124, 123, 125), PackedInt32Array(125, 123, 126), PackedInt32Array(128, 127, 129), PackedInt32Array(129, 127, 130), PackedInt32Array(132, 131, 133), PackedInt32Array(133, 131, 135), PackedInt32Array(133, 135, 134), PackedInt32Array(138, 137, 136), PackedInt32Array(140, 139, 141), PackedInt32Array(141, 139, 142), PackedInt32Array(144, 143, 145), PackedInt32Array(145, 143, 146), PackedInt32Array(148, 147, 149), PackedInt32Array(149, 147, 150), PackedInt32Array(153, 152, 151), PackedInt32Array(155, 154, 156), PackedInt32Array(156, 154, 157), PackedInt32Array(159, 158, 160), PackedInt32Array(160, 158, 161), PackedInt32Array(163, 162, 164), PackedInt32Array(164, 162, 165), PackedInt32Array(168, 167, 169), PackedInt32Array(169, 167, 166), PackedInt32Array(169, 166, 170), PackedInt32Array(173, 172, 171), PackedInt32Array(176, 175, 174), PackedInt32Array(178, 177, 179), PackedInt32Array(179, 177, 180), PackedInt32Array(182, 181, 183), PackedInt32Array(183, 181, 184), PackedInt32Array(186, 185, 187), PackedInt32Array(187, 185, 188), PackedInt32Array(190, 189, 191), PackedInt32Array(191, 189, 192), PackedInt32Array(195, 194, 193), PackedInt32Array(198, 197, 196), PackedInt32Array(201, 200, 199), PackedInt32Array(204, 203, 202), PackedInt32Array(206, 205, 207), PackedInt32Array(207, 205, 208), PackedInt32Array(210, 209, 211), PackedInt32Array(211, 209, 212), PackedInt32Array(214, 213, 215), PackedInt32Array(215, 213, 216), PackedInt32Array(218, 217, 219), PackedInt32Array(219, 217, 220), PackedInt32Array(223, 222, 221), PackedInt32Array(226, 225, 224), PackedInt32Array(228, 227, 229), PackedInt32Array(229, 227, 230), PackedInt32Array(233, 232, 231), PackedInt32Array(236, 235, 234), PackedInt32Array(238, 237, 239), PackedInt32Array(239, 237, 240), PackedInt32Array(242, 241, 243), PackedInt32Array(243, 241, 244), PackedInt32Array(247, 246, 245), PackedInt32Array(249, 248, 250), PackedInt32Array(250, 248, 251), PackedInt32Array(253, 252, 254), PackedInt32Array(254, 252, 255), PackedInt32Array(258, 257, 256), PackedInt32Array(260, 259, 261), PackedInt32Array(261, 259, 262), PackedInt32Array(265, 264, 263), PackedInt32Array(268, 267, 266), PackedInt32Array(270, 269, 271), PackedInt32Array(271, 269, 272), PackedInt32Array(275, 274, 273), PackedInt32Array(278, 277, 276), PackedInt32Array(280, 279, 281), PackedInt32Array(281, 279, 282), PackedInt32Array(285, 284, 283), PackedInt32Array(288, 287, 286), PackedInt32Array(290, 289, 291), PackedInt32Array(291, 289, 292), PackedInt32Array(294, 293, 295), PackedInt32Array(295, 293, 296), PackedInt32Array(299, 298, 297), PackedInt32Array(302, 301, 300), PackedInt32Array(305, 304, 303), PackedInt32Array(309, 308, 306), PackedInt32Array(306, 308, 307), PackedInt32Array(312, 311, 310), PackedInt32Array(314, 313, 315), PackedInt32Array(315, 313, 316), PackedInt32Array(320, 319, 317), PackedInt32Array(317, 319, 318), PackedInt32Array(322, 321, 323), PackedInt32Array(323, 321, 324), PackedInt32Array(328, 327, 325), PackedInt32Array(325, 327, 326), PackedInt32Array(330, 329, 331), PackedInt32Array(331, 329, 332), PackedInt32Array(332, 329, 334), PackedInt32Array(332, 334, 333), PackedInt32Array(338, 337, 335), PackedInt32Array(335, 337, 336), PackedInt32Array(339, 341, 340), PackedInt32Array(343, 342, 344), PackedInt32Array(344, 342, 345), PackedInt32Array(345, 342, 346), PackedInt32Array(348, 347, 349), PackedInt32Array(349, 347, 350), PackedInt32Array(353, 352, 351), PackedInt32Array(356, 355, 354), PackedInt32Array(359, 358, 357), PackedInt32Array(362, 361, 360), PackedInt32Array(365, 364, 363), PackedInt32Array(368, 367, 366), PackedInt32Array(371, 370, 369), PackedInt32Array(374, 373, 372), PackedInt32Array(377, 376, 375), PackedInt32Array(380, 379, 378), PackedInt32Array(382, 381, 383), PackedInt32Array(383, 381, 384), PackedInt32Array(387, 386, 385), PackedInt32Array(389, 388, 390), PackedInt32Array(394, 393, 391), PackedInt32Array(391, 393, 392)]
sample_partition_type = 2
geometry_parsed_geometry_type = 2
cell_size = 0.1
agent_height = 2.0

[node name="testing grounds" type="Node3D"]
script = ExtResource("1_5c5tl")

[node name="Player" parent="." instance=ExtResource("1_vxoov")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -44.0357, 13.6975, -39.7986)

[node name="Map" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.132452, -0.22595, -3.62969)
navigation_mesh = SubResource("NavigationMesh_j6mrc")

[node name="Floor" type="CSGBox3D" parent="Map"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
use_collision = true
size = Vector3(300, 1, 300)
material = ExtResource("3_8k6oy")

[node name="walls" type="CSGCombiner3D" parent="Map"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 149.502)
size = Vector3(300, 10, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -149.502)
size = Vector3(300, 10, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -149.502, 4, 0)
size = Vector3(300, 10, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 149.502, 4, 0)
size = Vector3(300, 10, 1)

[node name="raisedPlatform" type="CSGCombiner3D" parent="Map"]
use_collision = true

[node name="outerFloor" type="CSGBox3D" parent="Map/raisedPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.9257, 10.059, -43.1706)
size = Vector3(50, 3.86427, 50)

[node name="innerfloor" type="CSGCombiner3D" parent="Map/raisedPlatform"]
operation = 2

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/raisedPlatform/innerfloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.9257, 10.7872, -39.9036)
size = Vector3(47.0669, 3.93835, 52.652)

[node name="ramp" type="CSGBox3D" parent="Map/raisedPlatform"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, -56.5787, 3.1262, -9.30899)
size = Vector3(9.07667, 1, 21.1444)

[node name="corners" type="CSGCombiner3D" parent="Map"]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1.93628)
size = Vector3(9.85414, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.5682, 1, -5.18897)
size = Vector3(7.12883, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19885, 1, -4.89591)
size = Vector3(6.13028, 1, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31172, 1, -8.28996)
size = Vector3(5.70468, 1, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/corners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1, -6.51291)
size = Vector3(1.22215, 1, 4.2239)

[node name="EnemySpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.1955, 8.77435, 17.7988)

[node name="enemy" parent="." instance=ExtResource("3_pjdrh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.1955, 8.77435, 17.7988)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 34.818, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="DirectionalLight3D"]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, -3.09086e-08, -0.707107, 0.707107, 26.4773, 26.2827, -29.0113)

[node name="SpawnCoolDown" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 4
visible = false

[node name="SubViewport" type="SubViewport" parent="CanvasLayer"]
size_2d_override_stretch = true

[node name="Camera3D" type="Camera3D" parent="CanvasLayer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -21.2996, 46.1319, -26.8061)
current = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 308.0
offset_bottom = 308.0
expand_mode = 1

[connection signal="timeout" from="SpawnCoolDown" to="." method="_on_cool_down_timeout"]
